# AutoAPE-apeflow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py  test.py
apeflow/api/: MLModels.py
apeflow/api/algorithms/: AlgorithmAbstract.py  AlgorithmFactory.py  AlgorithmManager.py
apeflow/api/algorithms/gs/: GSAlgAbstract.py
apeflow/api/algorithms/gs/we/: GSCBOW.py  GSFastText.py  GSSkipGram.py
apeflow/api/algorithms/lightgbm/: LightGBM.py
apeflow/api/algorithms/pytorch/: PyTorchAlgAbstract.py
apeflow/api/algorithms/pytorch/nn/: PyTorchDNN.py
apeflow/api/algorithms/skl/: SKLAlgAbstract.py
apeflow/api/algorithms/skl/classifier/ensemble/: SKLExtraTrees.py  SKLIsolationForest.py  SKLRandomForest.py
apeflow/api/algorithms/skl/classifier/naive_bayes/: SKLBernoulliNB.py  SKLGaussianNB.py
apeflow/api/algorithms/skl/classifier/neighbors/: SKLKNeighbors.py
apeflow/api/algorithms/skl/classifier/neural_network/: SKLMLP.py
apeflow/api/algorithms/skl/classifier/svm/: SKLLinearSVC.py  SKLNuSVC.py  SKLSVC.py
apeflow/api/algorithms/skl/classifier/tree/: SKLDecisionTree.py
apeflow/api/algorithms/skl/clustering/: SKLDBSCAN.py  SKLKMeans.py
apeflow/api/algorithms/skl/dr/: SKLPCA.py
apeflow/api/algorithms/skl/od/: SKLODBKM.py
apeflow/api/algorithms/tf/keras/: TFKerasAlgAbstract.py
apeflow/api/algorithms/tf/keras/backborn/: KIDPSCNNBackborn.py  KIDPSFeedBackKNNClassifier.py  KTMSFeedBackKNN.py  KTMSSiameseNetworkBackborn.py
apeflow/api/algorithms/tf/keras/nn/: KCNN.py  KCNNAE.py  KDNN.py  KDNNAE.py  KRNN.py
apeflow/api/algorithms/tf/v2/: TFV2AlgAbstract.py
apeflow/api/algorithms/tf/v2/prob/: TFGPRMV2.py
apeflow/api/algorithms/xgboost/: XGBoost.py  __init__.py
apeflow/common/: Common.py  Constants.py
apeflow/interface/: ModelInterface.py
apeflow/interface/distribute/tf/: TFDistributeRunnerV2.py
apeflow/interface/model/: GSModel.py  ModelAbstract.py  ModelBuilder.py  PyTorchModel.py  SKLModel.py  TFModel.py  TFSingleModel.py  WrapperModel.py
apeflow/interface/model/export/: GSSavedModel.py  PyTorchSavedModel.py  SKLSavedModel.py  SavedModelAbstract.py  TFSavedModel.py
apeflow/interface/utils/gs/: LearnResultCallback.py
apeflow/interface/utils/lgbm/: LearnResultCallback.py
apeflow/interface/utils/tf/: TFUtils.py
apeflow/interface/utils/tf/keras/: EarlyStopCallback.py  LearnResultCallback.py
apeflow/interface/utils/xgboost/: LearnResultCallback.py
apeflow/resources/: com_func.json
apeflow/resources/backnorn/: KIDPSCNNBackborn-1.0.0.h5  KIDPSCNNBackborn-weight-1.0.0.h5  KIDPSCNNBackbornParam-1.0.0.json
apeflow/resources/models/tms/2.0.0/: KTMSSiameseNetworkBackborn-weight.h5  KTMSSiameseNetworkBackborn.h5
apeflow/resources/models/tms/2.0.0/info/: KTMSSiameseNetworkBackborn-param.json  unique_info.pkl
conf/: apeflow-conf.xml
