[tool.poetry]
name = "apeflow"
version = "4.0-dev"
description = "AutoML: Apeflow"
authors = ["Jin Kim <jin.kim@seculayer.com>"]
include = ["conf"]

[tool.poetry.dependencies]
python = "^3.7, <3.11"
tensorflow = "~2.7"
gensim = "^3.7"
scikit-learn = "^1.0"
torch = "^1.11.0"
numpy = "^1.21"
xgboost = "^1.6"
pycmmn = { git = "https://github.com/seculayer/AutoAPE-pycmmn.git", rev = "main" }
lightgbm = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.10.1"
pytest = "^7.1.1"
mypy = "^0.942"
hypothesis = "^6.43.3"
pytest-cov = "^3.0.0"
coverage = "^6.3.3"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
prospector = { extras = [
    "with_mypy",
    "with_vulture",
    "with_bandit",
], version = "^1.7.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --failed-first -n auto"
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120


[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "unused-argument",
    "no-value-for-parameter",
    "no-member",
    "no-else-return",
    "line-too-long",
    "fixme",
    "protected-access",
    "too-few-public-methods",
    "invalid-name"
]

[tool.pylint.format]
max-line-length = "120"
