[tool.poetry]
name = "apeflow"
version = "1.0.0"
description = "AutoML: Apeflow"
authors = ["Jin Kim <jin.kim@seculayer.com>"]
include = ["conf"]

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "~2.7"
gensim = "^3.7"
scikit-learn = "~1.0"
torch = {version = "~1.10.1+cu111", source = "pytorch-cuda"}
torchvision = {version = "~0.11.2+cu111", source = "pytorch-cuda"}
torchaudio =  {version = "~0.10.1", source = "pytorch-cuda"}
tensorflow-io-gcs-filesystem = "0.34.0"
numpy = "^1.21"
xgboost = "^1.6"
pycmmn = { git = "https://ssdlc-bitbucket.seculayer.com:8443/scm/slaism/autoape-pycmmn.git", rev = "develop" }
lightgbm = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.10.1"
pytest = "^7.1.1"
mypy = "^0.942"
hypothesis = "^6.43.3"
pytest-cov = "^3.0.0"
coverage = "^6.3.3"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
prospector = { extras = [
    "with_mypy",
    "with_vulture",
    "with_bandit",
], version = "^1.7.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --failed-first -n auto"
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu111"
default = false
secondary = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "unused-argument",
    "no-value-for-parameter",
    "no-member",
    "no-else-return",
    "line-too-long",
    "fixme",
    "protected-access",
    "too-few-public-methods",
    "invalid-name"
]

[tool.pylint.format]
max-line-length = "120"
